--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,17 @@
   text-align: center;
 }
 
+
+.logos {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  padding: 2%;
+  border: 1px solid;
+  border-radius: 50%;
 }
 
 @keyframes logo-spin {
