--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
   border-radius: 50%;
 }
 
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
