--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,37 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background: linear-gradient(green, yellow);
 }
 
+.mainContainer {
+  background-color: white;
+  border-radius: 5%;
+}
 
-.logos {
+.registro {
+  margin: 1%;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.social {
   display: flex;
   justify-content: center;
   gap: 15px;
 }
 
-.logo {
+.logotipo {
   padding: 2%;
   border: 1px solid;
   border-radius: 50%;
+}
+
+.subtitulo {
+  margin: 2%;
+  font-weight: 800;
 }
 
 .formulario {
@@ -25,6 +43,7 @@
   align-items: center;
   gap: 10px;
 }
+
 
 @keyframes logo-spin {
   from {
